--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -5,5 +5,11 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Noom
+        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body 
-        h1 It work !
+        header
+            h1 Noom
+        main 
+            h2 Welcome
+        script(src="/public/js/app.js")
+        
