--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,6 +10,12 @@ html(lang="en")
         header
             h1 Noom
         main 
-            h2 Welcome
+            form#nick
+                input(tpye="text", placeholder="Choose your Nickname", required)
+                button SAVE
+            ul 
+            form#message
+                input(tpye="text", placeholder="Write a Message", required)
+                button SEND
         script(src="/public/js/app.js")
         
