--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,12 +10,10 @@ html(lang="en")
         header
             h1 Noom
         main 
-            form#nick
-                input(tpye="text", placeholder="Choose your Nickname", required)
-                button SAVE
-            ul 
-            form#message
-                input(tpye="text", placeholder="Write a Message", required)
-                button SEND
+            div#welcome
+                form 
+                    input(placeholder="room name", required, type="text")
+                    button Enter Room
+        script(src="/socket.io/socket.io.js") 
         script(src="/public/js/app.js")
         
