--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,10 +10,21 @@ html(lang="en")
         header
             h1 Noom
         main 
+            div#name
+                form
+                    input(placeholder="name", required, type="text")
+                    button send  
             div#welcome
                 form 
                     input(placeholder="room name", required, type="text")
                     button Enter Room
+            div#room
+                h3
+                ul 
+                form#msg
+                    input(placeholder="message", required, type="text")
+                    button send  
+
         script(src="/socket.io/socket.io.js") 
         script(src="/public/js/app.js")
         
