--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -18,6 +18,8 @@ html(lang="en")
                 form 
                     input(placeholder="room name", required, type="text")
                     button Enter Room
+                h4 Open Rooms
+                ul#list    
             div#room
                 h3
                 ul 
