chat_Part_End_work_10/8

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,6 +10,9 @@ html(lang="en")
         header
             h1 Noom
         main 
+            div#open
+                h4 Open Rooms
+                ul 
             div#name
                 form
                     input(placeholder="name", required, type="text")
@@ -18,8 +21,6 @@ html(lang="en")
                 form 
                     input(placeholder="room name", required, type="text")
                     button Enter Room
-                h4 Open Rooms
-                ul#list    
             div#room
                 h3
                 ul 
