--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,6 +11,8 @@ html(lang="en")
             h1 Noom
         main 
             video#myFace(autoplay,paysinline, width="400", height="400")
+            button#mute Mute
+            button#camera Turn off Camera
         script(src="/socket.io/socket.io.js") 
         script(src="/public/js/app.js")
         
